Version 0.9.4 - IntelliSense additions
    * Adding IntelliSense to Java with simple List of selectable keywords
    * Added Toggle Comment Actions using Control SLASH
Version 0.9.3 - Start of scripts for the document:
    * Added new methods getLine() to SyntaxDocument
    * SyntaxDocument getIndexOf methods deprecated, use getMatchers instead
    * Added Line Numbering to Java
    * Added CaretMonitor Class
    * Merged Find And Replace dialogs into one.
    * Created SyntaxComponent interface and have all UI components implement
      that interface.  DefaultSyntaxKit will use config.properties class to
      dynamically install these components.
    * Added Right Margin option and Single Color Selection Options
    * Added Python, C and C++ Support
    * Added Ruby Syntax Support
    * Fixed Issue 37 (NPE for LineNumbersRuler)
    * Fixed Issue 39 (Highlighting Tokens overrides selection highlights)
    * Fixed some JavaDoc comments.
    * Fixed Line Numbers being displayed for the height of the editor and now
      just for the actual available lines.
    * Fixed Margin typo in all project. Issue 43
    * Changing Actions to be more configurable:
      * SyntaxActions renamed to ActionUtils
      * Removed all inner classes from SyntaxActions
      * Will create new SyntaxAction interface that will allow dynamic addition
        actions (in the addKeyActions of DefaultSyntaxKit
    * Added Text AA property to SyntaxView
Version 0.9.2:
    * Fixing Java Indentation and Un-Indentattion Actions
    * Added and used (in the Tester) clearUndoes on the SyntaxDocument
    * Added Basic JFlex Syntax
    * Added getContentTypes to DefaultSyntaxKit to get all registered
      ContentTypes.  This is now also used in the SyntaxTester instead of
      hardcoding the types.
    * Cleanup and optimization of Lexers by removing duplicate Java Code
      (replaced with Regex OR)
    * Removed calls to deprecated calls in SyntaxView